--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -1,3 +1,8 @@
 server:
   port: 8080
  
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_URI:http://test-container.hyd.ftd.com:8761/eureka}
+ 
