--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -4,5 +4,5 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${EUREKA_URI:http://test-container.hyd.ftd.com:8761/eureka}
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
  
