--- a/product-service/Dockerfile
+++ b/product-service/Dockerfile
@@ -1,9 +1,8 @@
 FROM openjdk:8
 MAINTAINER com.demo
-EXPOSE 8080
 ADD target/*.jar /
 ADD src/main/resources /resources
 ADD entrypoint.sh /entrypoint.sh
 ENV PATH /:$PATH
 RUN chmod +x /entrypoint.sh
-ENTRYPOINT ["/entrypoint.sh","-jar","app-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["/entrypoint.sh","-jar","product-service-0.0.1-SNAPSHOT.jar"]
